--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,27 @@ html{
     font-size: 62.5%;
     font-family: 'Lato', sans-serif;
 }
+.container-loader{
+    margin: auto;
+}
+
+.loader{
+    width: 3.6rem;
+    height: 3.6rem;
+    border: .5rem solid rgba(0, 0, 0, .1);
+    border-left-color: rgb(19, 18, 18);
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    margin: auto;
+}
+@keyframes spin{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
 
 /*======================= Header =======================*/
 
@@ -148,6 +169,15 @@ strong{
     grid-template-columns: repeat(auto-fill, 30rem);
     justify-content: center;
     grid-row-gap: 2rem;
+    animation: opacity 1s;
+}
+@keyframes opacity{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 .movies-api__img{
     text-align: center;
@@ -246,11 +276,11 @@ a{
 
     .information{
         flex-direction: column;
-        padding: 35rem 0;
+        padding: 3.5rem 0;
     }
     .information img{
-        width: 25rem;
-        height: 40rem;
+        width: 19rem;
+        height: 28rem;
     }
     .information div h1{
         text-align: center;
@@ -260,7 +290,7 @@ a{
     .information div {
         padding: 2rem;
         margin-left: 0;
-        /* padding: 0 2rem; */
+    
     }
     .movies-nav{
         display: flex;
@@ -285,85 +315,4 @@ a{
     }
 }
 
-@media screen and (max-width: 600px){
-
-    .header-list li{
-        display: block;
-        margin-bottom: 2rem;
-        font-size: 2.5rem;
-    }
-    .burger-menu{
-        position: relative;
-        z-index: 2;
-        top: 0;
-        cursor: pointer;
-    }
-    .nav{
-        list-style: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100vh;
-        position: fixed;
-        background-color: rgba(0, 0, 0, .6);
-        z-index: 1;
-        top: 0;
-        right: 0;
-        left: -100rem;
-        bottom: 0;
-        transition: 1s;
-    }
-    .nav.is-active{
-        left: 0;
-    }
-
-    .hero{
-        padding: 5rem;
-    }
-
-    .hero-p{
-        margin-right: 0;
-        font-size: 3rem;
-        line-height: 3.8rem;
-        margin-top: 3rem;
-    }
-    strong{
-        font-size: 3.5rem;
-    }
-    .movies-api{
-        margin: 3rem 0;
-    }
-} 
-
-@media screen and (max-width: 440px){
-    
-    .movies-nav li button{
-        font-size: 1.5rem;
-    }
-    .movies-api{
-        grid-template-columns: repeat(auto-fill, 18rem);
-    }
-
-    .movies-api__img img{
-        width: 16rem;
-        height: 26rem;
-    }
-    .movies-api__hover{
-        text-align: center;
-        width: 16rem;
-        height: 26rem;
-        left: 1rem;
-    } 
-    .btn{
-        width: 10rem;
-        height: 3.2rem;
-        margin-bottom: 1.3rem;
-        font-size: 1rem;
-    }
-    .movies-api__hover div h1{
-        font-size: 1.6rem;
-        margin-bottom: 5rem;
-    }
-}
 
